<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PersonalInfo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nameView">Your Name : </string>
    <string name="fatherView">Father Name : </string>
    <string name="distView">Home District : </string>
    <string name="emailView">E-mail : </string>
    <string name="cellView">Cell : </string>
    <string name="buttonView">Submit</string>
    <string name="title_activity_last">LastActivity</string>


</resources>
